--- a/test/BlUoW.Dapper.Tests/BlUoW.Dapper.Tests.csproj
+++ b/test/BlUoW.Dapper.Tests/BlUoW.Dapper.Tests.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="Dapper" Version="2.0.123" />
@@ -34,6 +35,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\BlUoW\BlUoW.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
