add sln and DiTestBase

--- a/test/BlUoW.Microsoft.Extensions.DependencyInjection.Tests/BlUoW.Microsoft.Extensions.DependencyInjection.Tests.csproj
+++ b/test/BlUoW.Microsoft.Extensions.DependencyInjection.Tests/BlUoW.Microsoft.Extensions.DependencyInjection.Tests.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\BlUoW\BlUoW.csproj" />
+    <ProjectReference Include="..\..\src\BlUoW.Microsoft.Extensions.DependencyInjection\BlUoW.Microsoft.Extensions.DependencyInjection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
